# SDL2-GLAD

./: .gitignore  CMakeLists.txt
glad/include/glad/: gl.h
glad/src/: gl.c
headers/: globals.h  reader.h
shaders/: fragment.txt  vertex.txt
src/: main.cpp  reader.cpp
